Check for write permissions before saving a file in IE. Ask again (KMessageBox) if permissions are not available.

TODO: We might want to check that the permissions can actually
      be changed (file can be written) if the user wants to.

BUG: 122374

svn path=/trunk/extragear/graphics/digikam/; revision=533453